# caviardeur

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  _entry.py  mise.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/caviardeur/: __init__.py  cli.py  config.py  pipeline.py
src/caviardeur/detectors/: base.py  composite.py  ner_detector.py  regex_detector.py
src/caviardeur/pseudonymizer/: engine.py  mapping.py
src/caviardeur/readers/: base.py  docx_reader.py  excel_reader.py  pdf_reader.py  pptx_reader.py  registry.py  txt_reader.py
src/caviardeur/writers/: docx_writer.py  excel_writer.py  pdf_writer.py  pptx_writer.py  txt_writer.py
tests/: test_cli.py  test_e2e.py  test_pipeline.py
tests/fixtures/: create_fixtures.py  sample.docx  sample.json  sample.md  sample.pptx  sample.txt  sample.xlsx  sample.xml
tests/test_detectors/: test_composite.py  test_ner_detector.py  test_regex.py
tests/test_pseudonymizer/: test_engine.py  test_mapping.py
tests/test_readers/: test_registry.py
